note how to manually restart pipeline #47

--- a/documentation/modules/ROOT/nav.adoc
+++ b/documentation/modules/ROOT/nav.adoc
@@ -23,5 +23,5 @@
 * xref:04-development.adoc[4. Development]
 ** xref:04-development.adoc#devspaces[OpenShift Dev Spaces]
 ** xref:04-development.adoc#gateway_update[Update the Gateway Component]
-** xref:04-development.adoc#validate_changes[Validate your changes]
-** xref:04-development.adoc#next_steps[Paving your own Golden Paths]
+** xref:04-development.adoc#validate_changes[Use your new feature]
+** xref:04-development.adoc#next_steps[Paving your own Golden Path]
