nav.adoc: Update the forgotten left nav to match latest index and heading anchors

--- a/documentation/modules/ROOT/nav.adoc
+++ b/documentation/modules/ROOT/nav.adoc
@@ -14,14 +14,15 @@
 
 * xref:03-components.adoc[3. Components]
 ** xref:03-components.adoc#software_catalog[Software Catalog]
-** xref:03-components.adoc#frontend[View the Frontend Component]
-** xref:03-components.adoc#plugins[About Plugins]
-** xref:03-components.adoc#gateway[View the Gateway Component]
-** xref:03-components.adoc#backend_template[Launch the Backend Template]
-** xref:03-components.adoc#backend[View the Backend Component]
+** xref:03-components.adoc#component_frontend[View the Frontend Component]
+** xref:03-components.adoc#plugins[Backstage Plugins]
+** xref:03-components.adoc#component_gateway[View the Gateway Component]
+** xref:03-components.adoc#deploy_backend[Launch the Backend Template]
+** xref:03-components.adoc#component_backend[View the Backend Component]
 
 * xref:04-development.adoc[4. Development]
-** xref:04-development.adoc#devspaces[OpenShift Dev Spaces]
-** xref:04-development.adoc#gateway_update[Update the Gateway Component]
+* xref:04-development.adoc#gateway_feature[Code a new feature]
+** xref:04-development.adoc#dev_spaces[OpenShift Dev Spaces]
+** xref:04-development.adoc#extend_gateway[Extend the Gateway API]
 ** xref:04-development.adoc#validate_changes[Use your new feature]
 ** xref:04-development.adoc#next_steps[Paving your own Golden Path]
