Update nav.adoc: list indent level oops

--- a/documentation/modules/ROOT/nav.adoc
+++ b/documentation/modules/ROOT/nav.adoc
@@ -21,7 +21,7 @@
 ** xref:03-components.adoc#component_backend[View the Backend Component]
 
 * xref:04-development.adoc[4. Development]
-* xref:04-development.adoc#gateway_feature[Code a new feature]
+** xref:04-development.adoc#gateway_feature[Code a new feature]
 ** xref:04-development.adoc#dev_spaces[OpenShift Dev Spaces]
 ** xref:04-development.adoc#extend_gateway[Extend the Gateway API]
 ** xref:04-development.adoc#validate_changes[Use your new feature]
