--- a/documentation/modules/ROOT/pages/index.adoc
+++ b/documentation/modules/ROOT/pages/index.adoc
@@ -16,7 +16,11 @@ Backstage will support you from the start with signposts to components in a sing
 
 == Workshop brief
 
-In these exercises you will use Backstage _Templates_ to deploy the *POI Map* application, a microservices-based application showing geo-data points into a world map. The architecture is divided in three application tiers as you can see from the picture below. 
+In these exercises you will use Backstage _Templates_ to deploy the *Points of Interest (POI) Map* application. The POI Map shows location points on a world map that zooms and scrolls. Clicking on a location marker reveals its details.
+
+POI Map defines a location to have a latitdue, longitude, name, and an optional description. It can display arbitrary locations. In this workshop, you'll attach a data source containing hundreds of national parks around the world.
+
+POI Map is divided into three application tiers: 
 
 image::poi-map.png["POI Map Architecture diagram"]
 
@@ -24,16 +28,14 @@ image::poi-map.png["POI Map Architecture diagram"]
 * The data-bridging **Gateway**
 * The data storage **Backend**.
 
-In the xref:01-setup.adoc[first section], you'll sign in to OpenShift and to Backstage with your GitHub ID. Throughout the exercises, you'll note that your GitHub ID is your user name in both OpenShift and Backstage, and that your application components are deployed to an OpenShift _Project_ with the same name. Both your user name and your Project name will match the GitHub ID you use to authenticate.
+In the xref:01-setup.adoc[first section], you'll sign in to OpenShift and to Backstage with your GitHub ID. Notice that your GitHub ID is your user name in both OpenShift and Backstage, and that your application components are deployed to an OpenShift _Project_ with the same name. Both your user name and your Project name will match the GitHub ID you use to authenticate.
 
-In xref:02-templates.adoc[section 2], you'll get to know Backstage Templates as you use two provided Templates to fork, build, and deploy the graphical map interface frontend and the API gateway that supports it.
+In xref:02-templates.adoc[section 2], you'll use two provided Templates to build and deploy the graphical map interface frontend and the API gateway that supports it.
 
-While those two components are enough to establish the absolute minimum viable product of a global, dynamic map diplaying arbitrary locations, you'll soon want to iterate a more robust data source for points on the map.
+While those two components establish the absolute minimum viable product of a global, dynamic map diplaying arbitrary locations, you'll soon want a more interesting and robust data source for points on the map.
 
-In xref:03-components.adoc[section 3], you'll use Backstage's tools for exploring application _Components_ and their connections to examine the deployed frontend and gateway to understand their places in the application architecture. The gateway provides a for-purpose map location API used by the frontend. It also expects to consume a more database-centric backend API.
+In xref:03-components.adoc[section 3], you'll use Backstage's tools for exploring application _Components_ and their connections to examine the deployed frontend and gateway to understand their places in the application architecture. The gateway provides a map location API used by the frontend. It also expects to consume a more database-centric backend API.
 
-You'll use another template to create and deploy that backend component. At that point, you'll have a map application displaying many location points around the world. Backstage lets Platform Engineers devise _Golden Paths_ like this one that encapsulate the basic components of applications a team might work on and guides developers in their quick deployment.
+You'll use another template to create and deploy that backend component. You'll then have a map application displaying many location points around the world. Backstage lets Platform Engineers devise _Golden Paths_ like this one that encapsulate the pieces of the applications a team might work on and guides developers in their quick deployment.
 
 In xref:04-development.adoc[section 4], you'll extend your map app with a lower-level feature. Backstage links you from app components to the OpenShift Dev Spaces web IDE, where you can edit the gateway's source code. Then you'll see how Backstage helps you or your teammates discover, navigate and test your modified gateway API.
-
-Let's start!
