--- a/documentation/modules/ROOT/pages/04-development.adoc
+++ b/documentation/modules/ROOT/pages/04-development.adoc
@@ -134,8 +134,10 @@ You have made it to the end of the National Parks Map application Golden Path. _
 
 Now it's your turn to begin crafting your own Golden Paths using Backstage Software Templates and related platform services such as ArgoCD, Tekton, Dev Spaces, and OpenShift.
 
-* For information about setting up your own Backstage / Janus demo environment, see: https://janus-idp.io/demo-setup/install/
-
 * To learn about the Software Templates that were used in this workshop, visit: https://github.com/redhat-scholars/backstage-workshop
 
+* For more Backstage / Janus Software Templates examples, see: https://github.com/janus-idp/software-templates
+
 * To share your feedback on this workshop, open an issue here: https://github.com/redhat-scholars/backstage-workshop/issues
+
+
