--- a/documentation/modules/ROOT/pages/02-templates.adoc
+++ b/documentation/modules/ROOT/pages/02-templates.adoc
@@ -12,31 +12,27 @@ Click on `Create...` in the sidebar menu. *CHOOSE* the _Angular Single Page Appl
 
 image::backstage_create_frontend.png[]
 
-Keep default values in every field except the _Repository Name_ in the first section, the _Namespace_ and _Owner_ fields in the second section, and the _Image Name_ field in the third section of the template create form. You will adapt each of those fields for your own user and Project/namespace. Recall from chapter 1 that some Backstage forms refer to a Namespace that is equivalent to your OpenShift Project.
+Keep default values in the first section and click NEXT STEP to continue
 
-image::frontend_1.png[]
+image::frontend_1b.png[]
 
-Type or paste your Project/namespace name to replace the NAMESPACE placeholder in the _Repository Name_ field. The result should be something like `projectname-frontend`. Click NEXT STEP to continue.
+In the second section of the template create form, type or paste your Project/namespace name into the _Namespace_ field.  In the Owner input, enter "user:USERNAME" where "USERNAME" is your own github username.  The result should be something like "user:ryanj".
 
-image::frontend_2.png[]
+Recall from chapter 1 that some Backstage forms refer to a Namespace that is equivalent to your OpenShift Project.
 
-In the second section of the template create form, type or paste your Project/namespace name to replace the NAMESPACE placeholder in the _Namespace_ field. The result should be something like `projectname`.
+image::frontend_2b.png[]
 
-Fill in the _Owner_ field by either *A)* Clicking the Owner field and selecting the `user:NAMESPACE` matching your Project name from the pull-down menu, *or* *B)* if your Project name does not appear in the Owners pull-down menu, typing the literal string `user`, followed by a colon `:`, followed by your Project name. The resulting string should be something like `user:projectname`.
+Click NEXT STEP to review the configuration you've set in the frontend template.
 
-Click NEXT STEP to proceed to the third section of the template create form.
+image::frontend_3b.png[]
 
-image::frontend_3.png[]
+Review your configuration, making sure that your own Project name is listed. Note that the _Owner_ name may include a `default` prefix in the summary, like `user:default/projectname`. This represents Backstage's `default` user grouping. Click `CREATE` to deploy your frontend component.
 
-Type or paste your Project name to replace the NAMESPACE placeholder in the _Image Name_ field of the create form's third section. The result should be something like `projectname/poi-map-app`. Click NEXT STEP to review the configuration you've set in the frontend template.
+image::frontend_4b.png[]
 
-image::frontend_4.png[]
-
-Review your configuration, making sure that your own Project name is as expected in the fields you adjusted: _Repo Name_, _Namespace_, _Owner_, and _Image Name_. Note that the _Owner_ name may include a `default` prefix in the summary, like `user:default/projectname`. This represents Backstage's `default` user grouping. Click `CREATE` to deploy your frontend component.
+Review the scaffolding process and template output.  Click on the _Source Code Repository_ link to view the scaffolded frontend source code repository.
 
 image::frontend_5.png[]
-
-Review the output from deploying the template.  Click on the _Source Code Repository_ link to view the scaffolded frontend source code repository.
 
 [#github]
 == View the source
@@ -54,21 +50,21 @@ Click on `Create...` in the sidebar menu, then choose the "Quarkus Gateway Appli
 
 image::backstage_create_gateway.png[]
 
-Insert your `NAMESPACE` value, then click `NEXT STEP` to proceed.
+Click `NEXT STEP` to proceed.
 
-image::gateway_1.png[]
+image::gateway_1b.png[]
 
-Insert your `NAMESPACE` values and owner info, then click `NEXT STEP` to proceed.
+Insert your `NAMESPACE` value and Owner info (_user:USERNAME_), then click `NEXT STEP` to proceed.
 
-image::gateway_2.png[]
+image::frontend_2b.png[]
 
-Insert your `NAMESPACE` value, then click `NEXT STEP` to proceed.
+Click `NEXT STEP` to proceed.
 
-image::gateway_3.png[]
+image::frontend_3b.png[]
 
 Review the input selections, click `CREATE` when ready.
 
-image::gateway_4.png[]
+image::frontend_4b.png[]
 
 Review the template output.  Click on Pipeline status to view the build pipelines for the app.
 
